# oblibeny

./: .gitattributes  .gitignore  .gitmodules  .tool-versions  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  ANCHOR.scope-arrest.2026-01-01.Jewell.scm  AUTHORITY_STACK.mustfile-nickel.scm  BUILD-LOG.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  CRYPTO-FFI-COMPLETE.md  Cargo.toml  Containerfile  Containerfile.crypto  Dockerfile.argon2  Dockerfile.crypto-builder  Dockerfile.lago-grey-minimal  Dockerfile.liboqs  Dockerfile.libsodium  Dockerfile.oblibeny-bootstrap  Dockerfile.oblibeny-minimal  ECOSYSTEM.scm  EXPLAINME.adoc  FIRST-IMAGE-SUCCESS.md  Justfile  LSP-SERVER-IMPLEMENTATION.md  META.scm  Mustfile  README.adoc  ROADMAP.adoc  ROADMAP.md  SPEC.core.scm  STATE.scm  about.html  arcvix-turing-incomplete-constrained-form.tex  contact.html  docs.html  dune-project  (+11 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  hypatia-scan.yml  instant-sync.yml  mirror.yml  quality.yml  scorecard.yml  secret-scanner.yml  semgrep.yml  workflow-linter.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/bot_directives/: README.adoc  git-private-farm.a2ml  gitbot-fleet.a2ml  hypatia.a2ml
.machine_readable/contractiles/: Adjustfile.a2ml  Bustfile.a2ml  Dustfile.a2ml  Intentfile.a2ml  Justfile.a2ml  Mustfile.a2ml  Trustfile.a2ml
.machine_readable/self-validating/: README.adoc  methodology-guard.k9.ncl
.machine_readable/self-validating/examples/: ci-config.k9.ncl  project-metadata.k9.ncl  setup-repo.k9.ncl
.well-known/: aibdp.json
config/: oblibeny.ncl
deploy/: vordr-manifest.toml
deploy/kubernetes/: oblibeny-deployment.yaml.kubernetes-reference
docs/: COMPARISON-CHART.adoc  CONTRACTILES.adoc  DISTRIBUTION-ARCHITECTURE.adoc  DISTROLESS-BOOTSTRAP.adoc  LANGUAGE-SPEC.md  PACKAGE-FORMAT-SPEC.adoc  SECURITY-ARCHITECTURE.adoc  STAPELN-INTEGRATION.adoc  TUTORIAL.md  WHY-DISTROLESS.adoc  echo-alignment.md  implementation-specification.scm  next-claude-prompt.md  oblibeny-semantics.md  proof-debt.md  tech-debt-2026-05-26.md
docs/academic/: INDEX.adoc  TODO.adoc
docs/academic/complexity/: 01-complexity-theory.adoc
docs/academic/cryptography/: 01-oram-security.adoc  02-encryption-primitives.adoc
docs/academic/engineering/: 01-hardware-specifications.adoc  02-protocol-specifications.adoc
docs/academic/foundations/: 01-set-theory.adoc  02-type-theory.adoc  03-category-theory.adoc  04-probability-theory.adoc  05-algebra-number-theory.adoc  06-logic-proof-theory.adoc
docs/academic/information-theory/: 01-information-theory.adoc
docs/academic/statistics/: 01-statistical-security.adoc
docs/academic/verification/: 01-formal-verification.adoc  02-program-analysis.adoc  03-concurrency-distributed.adoc
docs/academic/white-papers/: oblibeny-technical-whitepaper.adoc
docs/specs/: echo-6a2.adoc
docs/specs/architecture/: compiler-architecture.adoc
docs/specs/backend/: rust-backend.adoc
docs/specs/frontend/: ocaml-frontend.adoc
docs/specs/ir/: oir-specification.adoc
docs/status/: 2026-06-19-musts-intends-wishes.adoc
editors/vscode/: README.md  package.json
examples/: crypto-xor.obl  echo-types.obl  fibonacci.obl  hello.obl  invalid_recursion.obl  invalid_while.obl  struct_demo.obl  swap.obl  temperature-monitor.obl  type_error.obl  xor_cipher.obl
examples/alib/: README.md  arithmetic.obl  comparison.obl  logical.obl
ffi/zig/: build.zig
grammar/: oblibeny-v0.6.ebnf
lib/: ast.ml  constrained_check.ml  debugger.ml  dune  errors.ml  eval.ml  lexer.ml  location.ml  lsp_completion.ml  lsp_diagnostics.ml  lsp_hover.ml  lsp_protocol.ml  parse.ml  parser.mly  profiler.ml  sexpr_dump.ml  static_analyzer.ml  trace.ml  typecheck.ml
obli-transpiler-framework/: .gitignore  Cargo.toml  README.md  justfile
obli-transpiler-framework/backend/: Cargo.toml
obli-transpiler-framework/backend/src/: codegen.rs  error.rs  main.rs  oir.rs
obli-transpiler-framework/driver/: Cargo.toml
obli-transpiler-framework/driver/src/: error.rs  main.rs  pipeline.rs
obli-transpiler-framework/examples/: secret_lookup.obl
obli-transpiler-framework/frontend/: dune-project
obli-transpiler-framework/frontend/lib/: ast.ml  dune  emit_oir.ml  errors.ml  lexer.mll  location.ml  oblicheck.ml  parser.mly  typecheck.ml
obli-transpiler-framework/runtime/: Cargo.toml
obli-transpiler-framework/runtime/benches/: oram_bench.rs
obli-transpiler-framework/runtime/src/: collections.rs  constant_time.rs  crypto.rs  lib.rs  oram.rs
obli-transpiler-framework/runtime/src/oram/: bucket.rs  path.rs  position.rs  stash.rs
proofs/: Oblibeny.lean
scripts/: check-proofs.sh
site/: index.md
src/: ast.rs  callgraph.rs  driver.rs  error.rs  hir.rs  interpreter.rs  lexer.rs  lib.rs  lower.rs  macro_expand.rs  main.rs  mir.rs  parser.rs  phase.rs  repl.rs  resources.rs  span.rs  symbol.rs  termination.rs  token.rs  typeck.rs
src/abi/: Crypto.idr  oblibeny-abi.ipkg
src/codegen/: emitter.rs  mod.rs  regalloc.rs
src/opt/: const_fold.rs  dce.rs  mod.rs
src/stdlib/: collections.rs  core.rs  io.rs  math.rs  mod.rs  string.rs
test/: conformance_test.ml  dune
wiki/: CLI-Reference.md  Capability-Model.md  Cerro-Torre-Integration.md  Compiler-Internals.md  Dual-Language-Paradigm.md  Ecosystem-Integration.md  FAQ.md  Glossary.md  Home.md  Language-Overview.md  README.md  Selur-Integration.md  Stdlib-Overview.md  Svalinn-Integration.md  Testing-Framework.md  Tutorial-Quick-Start.md  Vordr-Integration.md
(+11 files in other folders)
