# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "oblibeny"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Jonathan D.A. Jewell"]
description = "Oblíbený: Dual-Language Paradigm compiler for secure edge computing"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/oblibeny"
keywords = ["compiler", "security", "edge-computing", "obfuscation", "formal-verification"]
categories = ["compilers", "development-tools"]

[lib]
name = "oblibeny"
path = "src/lib.rs"

[[bin]]
name = "oblc"
path = "src/main.rs"

[dependencies]
# Core
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Parsing
logos = "0.15"

# Data structures
indexmap = "2"
petgraph = "0.7"
smallvec = "1"

# Serialization
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
insta = "1"
proptest = "1"

[features]
default = []
z3 = []  # Enable Z3 SMT solver integration
paranoid = []  # Enable paranoid obfuscation mode

[profile.release]
lto = true
codegen-units = 1
strip = true
