# SPDX-License-Identifier: MIT OR Palimpsest-0.8
# Copyright (c) 2024 Hyperpolymath

[workspace]
resolver = "2"
members = [
    "backend",
    "runtime",
    "driver",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hyperpolymath"]
license = "MIT OR Palimpsest-0.8"
repository = "https://github.com/hyperpolymath/oblibeny"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
