# SPDX-License-Identifier: MIT OR Palimpsest-0.8
# Copyright (c) 2024 Hyperpolymath

[package]
name = "oblibeny"
version = "0.1.0"
edition = "2021"
authors = ["Hyperpolymath"]
description = "Oblibeny language compiler - oblivious computing made safe"
license = "MIT OR Palimpsest-0.8"
repository = "https://github.com/hyperpolymath/oblibeny"
default-run = "oblibeny"

[[bin]]
name = "oblibeny"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
which = "6.0"
tempfile = "3.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
