# SPDX-License-Identifier: MIT OR Palimpsest-0.8
# Copyright (c) 2024 Hyperpolymath

[package]
name = "oblibeny-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Hyperpolymath"]
description = "Oblibeny ORAM runtime library - oblivious data structures and constant-time primitives"
license = "MIT OR Palimpsest-0.8"
repository = "https://github.com/hyperpolymath/oblibeny"

[features]
default = ["std"]
std = []
hardware-aes = ["aes/force-soft"]

[dependencies]
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
blake3 = "1.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "oram_bench"
harness = false
